# Head

- Added named references to generated ruby code (already implemented in generated C code)
- Added settting to allow the inline_formulae_that_are_only_used_once method to be skipped

# 0.2.21 - 2014 April 27th

- Fix ruby version of SUMIFS to match number criteria against string check values (already fixed in C version)
- bin/excel_to_c and bin/excel_to_ruby options changed and added -n option to keep named references
- default behaviour when named_references_to_keep = :all but no named references is then to keep all cells

# 0.2.20 - 2014 March 31st

- Attempts to simplify some SUMIFS statements, even if they can't be calculated entirely at compile time
- Removed redundant ReplaceFormulaeWithCalculatedValues class and test - The underlying MapFormulaeToValues class is now used directly
- Fixed comparisons to be able to compare values of different types (e.g., true is always greater than String in Excel)
- Added an ExcelToTest class which generates a test file for a workbook, but does not generate the code to implement the workbook.

# 0.2.19 - 2014 March 18th

- Fixed a bug in ReplaceArithmeticOnRangesAst where there was too much mapping going on
- Improved the number of cases where SUM is partially eliminated
- Now replaces IF statements at compile time if the condition can be evaluated
- Stop replacing 0^X and 0/X with zero. If X is zero, then an error is the correct answer.
- Inlined blanks are now returned as blanks not at zeros.
- When extracting constants, now uses the integer numbers from one to ten that are defined as constants in the C runtime
- Improved the annoying emergency bodge on array formulae extraction to interpret INDIRECTs within array formulae in more cases
- Can now parse some formulae with a trailing percentage suffix like ROUND(24.3,0)% 
- If INDEX is passed an errors in both arguments, returns the error in its first argument
- Now simplifies SUM() with single arguments to the single argument